--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="footer-content">
             <p class="name">Malasani Kumaraswamy Sri Kruthi</p>
             <p class="contact">
-                📞 <a href="tel:9490899252">9490899252</a> |
+                📞 <a href="tel:8179075295">8179075295</a>
                 ✉ <a href="mailto:mksrikruthi2006@gmail.com">mksrikruthi2006@gmail.com</a>
             </p>
             <div class="social-icons">
@@ -52,4 +52,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
